sort issue video-selector container too big

--- a/src/Components/Molecules/VideoSelector/videoSelector.scss
+++ b/src/Components/Molecules/VideoSelector/videoSelector.scss
@@ -2,6 +2,8 @@
   align-items: center;
   display: flex;
   height: 200px;
+  max-width: 95%;
+  position: relative;
 
   .container {
     display: flex;
@@ -30,11 +32,11 @@
       z-index: 1;
 
       &.left {
-        left: 0;
+        left: -15px;
       }
 
       &.right {
-        right: 0;
+        right: -15px;
       }
     }
   }
